add play instructions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div id="score">0</div>
     <canvas id="canvas"></canvas>
     <script src="dist/js/main.min.js"></script>
-    <a href="https://www.google.com" target="_blank">go to google</a>
+    <h2>How to play:</h2>
+    Use space bar to control the block moving direction.
+    <br>
+    <!-- <a href="https://www.google.com" target="_blank">go to google</a> -->
   </body>
 </html>
